changed information in first cupcake and fixed alignments

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
+    flex: 1;
 }
 
 img{
@@ -83,11 +84,12 @@ button{
     font-size: 36px;
     font-weight: bolder;
     color: #1F2637;
+    margin-bottom: -10px;
 }
 
 .container{
     display: flex;
-    justify-content: space-evenly;
+    gap: 50px;
 }
 
 .box{
@@ -112,10 +114,16 @@ button{
     text-align: center;
     display: flex;
     flex-wrap: wrap;
+    max-width: 270px;
 }
 
 .cupcakes{
     width: 200px;
     height: 200px;
-    border-radius: 25px;
+    border-radius: 20px;
 }
+
+.explanations.long{
+    margin-top: 60px;
+}
+
